<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.idtechproducts.usbhid.securehead.demo.SecureHeadUsbHidDemo" >

    <item
        android:id="@+id/action_switch_reader_type"
    	android:orderInCategory="100"
    	android:title="@string/action_switch"
    	app:showAsAction="never"/>
        <!---->
   	<!--<item-->
       <!--android:id="@+id/action_start_autoconfig"-->
       <!--android:orderInCategory="100"-->
       <!--android:title="@string/action_autoconfig"-->
       <!--app:showAsAction="never"/>-->

   	<!--<item-->
       <!--android:id="@+id/action_start_rki"-->
       <!--android:orderInCategory="100"-->
       <!--android:title="@string/action_start_rki"-->
       <!--app:showAsAction="never"/>-->

    <item
        android:id="@+id/action_enable_log"
        android:orderInCategory="100"
        android:title="@string/action_enable_log"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_log"
        android:orderInCategory="100"
        android:title="@string/action_delete_log"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_firmware_update_init"
        android:orderInCategory="100"
        android:title="@string/action_firmware_update_init"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_firmware_update"
        android:orderInCategory="100"
        android:title="@string/action_firmware_update"
        app:showAsAction="never"/>
        	
    <item
        android:id="@+id/action_exit_app"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
    
    
</menu>
