<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    >

    <ImageView
        android:id="@+id/idtech_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logoDesc"
        android:src="@drawable/logo" />

	<LinearLayout
        android:id="@+id/linearLayoutEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
	    android:focusable="true"
	    android:focusableInTouchMode="true"        
        android:background="#dddddd"
        >

		<TextView
		    android:id="@+id/header_text"
		    android:layout_width="fill_parent"
		    android:layout_height="24sp"
		    android:layout_marginLeft="10dp"
		    android:gravity="bottom"
		    android:text="@string/lbl_sdk_info"
		    android:textStyle="bold" >
 
		</TextView>

		<ScrollView
		    android:layout_width="fill_parent"
		    android:layout_height="120dp"
		    android:layout_marginBottom="5dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="5dp"
		    android:background="#ffffff">		
			<TextView
			    android:id="@+id/text_area_top"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="14sp"
			    android:textIsSelectable="true"
			    android:text="" >
		  	</TextView>  
		</ScrollView>
		
		<ScrollView
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_marginBottom="10dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="5dp"
		    android:background="#ffffff">		
			<TextView
		    	android:id="@+id/text_area_bottom"
		    	android:layout_width="fill_parent"
		    	android:layout_height="match_parent"
		    	android:textSize="14sp"
		    	android:gravity="top"
		    	android:textIsSelectable="true"
		    	android:text="" >
  
			</TextView>  
		</ScrollView>
		  
	</LinearLayout>    
    
	<LinearLayout
	    android:id="@+id/linearLayoutBottom"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp" >

	    <Button
	        android:text="@string/lbl_swipe_card"
	        android:id="@+id/btn_swipeCard"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	    <TextView  
	    	android:id="@+id/status_text"
	        android:layout_width="0dp" 
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center_vertical|center_horizontal" />
	    <Button
	        android:text="@string/lbl_command"
	        android:id="@+id/btn_command"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	</LinearLayout>    
    



</LinearLayout>
